--- a/static/index.html
+++ b/static/index.html
@@ -2,30 +2,205 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Jim Education Platform</title>
   <style>
-    body { font-family: system-ui, Arial, sans-serif; margin: 0; }
-    .wrap { min-height: 100vh; display:flex; align-items:center; justify-content:center; padding: 40px; }
-    .card { max-width: 900px; width: 100%; border: 1px solid #eee; border-radius: 18px; padding: 28px; box-shadow: 0 10px 30px rgba(0,0,0,.06); }
-    h1 { margin: 0 0 8px; font-size: 2rem; }
-    p { margin: 0 0 16px; font-size: 1.05rem; color: #333; line-height: 1.5; }
-    .pill { display:inline-block; padding: 6px 10px; border-radius: 999px; background:#f4f4f5; font-size:.9rem; margin-right: 8px; }
-    .btn { display:inline-block; padding: 10px 14px; border-radius: 12px; border: 1px solid #ddd; text-decoration:none; color:#111; }
-    .btn:hover { background:#fafafa; }
+    :root{
+      --bg: #0b0f19;
+      --card: rgba(255,255,255,.06);
+      --border: rgba(255,255,255,.12);
+      --text: rgba(255,255,255,.92);
+      --muted: rgba(255,255,255,.72);
+      --accent: #7c3aed;
+      --accent2:#22c55e;
+    }
+    *{box-sizing:border-box}
+    body{
+      margin:0;
+      font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+      background: radial-gradient(1200px 600px at 20% 10%, rgba(124,58,237,.35), transparent 60%),
+                  radial-gradient(900px 500px at 85% 20%, rgba(34,197,94,.25), transparent 55%),
+                  radial-gradient(900px 500px at 50% 85%, rgba(59,130,246,.20), transparent 60%),
+                  var(--bg);
+      color: var(--text);
+    }
+    .wrap{
+      min-height:100vh;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      padding:48px 18px;
+    }
+    .card{
+      width:min(980px, 100%);
+      border:1px solid var(--border);
+      background: linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.04));
+      border-radius:24px;
+      box-shadow: 0 25px 80px rgba(0,0,0,.35);
+      overflow:hidden;
+    }
+    header{
+      padding:26px 28px;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      gap:16px;
+      border-bottom:1px solid var(--border);
+      background: rgba(0,0,0,.18);
+      backdrop-filter: blur(10px);
+    }
+    .brand{
+      display:flex;
+      align-items:center;
+      gap:12px;
+      font-weight:700;
+      letter-spacing:.2px;
+    }
+    .logo{
+      width:40px; height:40px;
+      border-radius:12px;
+      background: linear-gradient(135deg, var(--accent), #3b82f6);
+      box-shadow: 0 10px 30px rgba(124,58,237,.35);
+    }
+    nav a{
+      color: var(--muted);
+      text-decoration:none;
+      margin-left:14px;
+      font-size:.95rem;
+    }
+    nav a:hover{ color: var(--text); }
+    main{
+      padding:34px 28px 28px;
+      display:grid;
+      grid-template-columns: 1.2fr .8fr;
+      gap:22px;
+    }
+    @media (max-width: 860px){
+      main{ grid-template-columns:1fr; }
+    }
+    h1{
+      margin:0 0 10px;
+      font-size: clamp(1.9rem, 3.2vw, 2.6rem);
+      line-height:1.15;
+    }
+    p{
+      margin:0 0 18px;
+      color: var(--muted);
+      font-size:1.05rem;
+      line-height:1.6;
+    }
+    .pillrow{ display:flex; flex-wrap:wrap; gap:10px; margin: 18px 0 10px; }
+    .pill{
+      display:inline-flex;
+      align-items:center;
+      gap:8px;
+      padding:8px 12px;
+      border-radius:999px;
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.04);
+      font-size:.92rem;
+      color: var(--muted);
+    }
+    .dot{ width:9px; height:9px; border-radius:50%; background: var(--accent2); box-shadow:0 0 0 4px rgba(34,197,94,.18); }
+    .cta{
+      display:flex; flex-wrap:wrap; gap:12px; margin-top:18px;
+    }
+    .btn{
+      appearance:none;
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.06);
+      color: var(--text);
+      padding:12px 14px;
+      border-radius:14px;
+      text-decoration:none;
+      font-weight:600;
+      display:inline-flex;
+      align-items:center;
+      gap:10px;
+    }
+    .btn.primary{
+      border-color: rgba(124,58,237,.55);
+      background: linear-gradient(135deg, rgba(124,58,237,.9), rgba(59,130,246,.75));
+      box-shadow: 0 16px 45px rgba(124,58,237,.25);
+    }
+    .btn:hover{ transform: translateY(-1px); }
+    .panel{
+      border:1px solid var(--border);
+      background: rgba(255,255,255,.04);
+      border-radius:18px;
+      padding:18px;
+    }
+    .panel h3{ margin:0 0 10px; font-size:1.05rem; }
+    .panel ul{ margin:0; padding-left:18px; color: var(--muted); line-height:1.7; }
+    footer{
+      padding:18px 28px 24px;
+      border-top:1px solid var(--border);
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px;
+      justify-content:space-between;
+      color: rgba(255,255,255,.55);
+      font-size:.92rem;
+    }
+    code{
+      background: rgba(0,0,0,.25);
+      border:1px solid var(--border);
+      padding:2px 6px;
+      border-radius:8px;
+      color: rgba(255,255,255,.82);
+    }
   </style>
 </head>
 <body>
   <div class="wrap">
     <div class="card">
-      <div>
-        <span class="pill">Render + Python</span>
-        <span class="pill">Flask</span>
-        <span class="pill">v0.1</span>
-      </div>
-      <h1>Jim Education Platform</h1>
-      <p>Your site is live. Next we’ll add pages, a clean navigation, and your first API endpoint.</p>
-      <a class="btn" href="/api/health">Check API Health</a>
+      <header>
+        <div class="brand">
+          <div class="logo" aria-hidden="true"></div>
+          <div>Jim Education Platform</div>
+        </div>
+        <nav>
+          <a href="/">Home</a>
+          <a href="/api/health">API</a>
+        </nav>
+      </header>
+
+      <main>
+        <section>
+          <h1>Build modern, self-paced learning—powered by Python.</h1>
+          <p>
+            This is the foundation. Next we’ll add a clean course catalog, student progress tracking,
+            and tools for assignments, grading, and interactive labs.
+          </p>
+
+          <div class="pillrow">
+            <span class="pill"><span class="dot"></span>Live on Render</span>
+            <span class="pill">Flask backend</span>
+            <span class="pill">HTML/CSS/JS frontend</span>
+            <span class="pill">Versioned with GitHub</span>
+          </div>
+
+          <div class="cta">
+            <a class="btn primary" href="/api/health">✅ Test API Health</a>
+            <a class="btn" href="https://github.com/jlowder7884/jim-education-platform" target="_blank" rel="noreferrer">View Repo</a>
+          </div>
+        </section>
+
+        <aside class="panel">
+          <h3>Next milestones</h3>
+          <ul>
+            <li>Create <code>/courses</code> page (catalog)</li>
+            <li>Add <code>/api/courses</code> endpoint (JSON)</li>
+            <li>Introduce a simple “lesson page” template</li>
+            <li>Deploy updates automatically on every GitHub push</li>
+          </ul>
+        </aside>
+      </main>
+
+      <footer>
+        <span>v0.1 • Deployed successfully</span>
+        <span>Next: Courses + navigation + first real content</span>
+      </footer>
     </div>
   </div>
 </body>
