--- a/static/index.html
+++ b/static/index.html
@@ -161,6 +161,7 @@
         </div>
         <nav>
           <a href="/">Home</a>
+          <a href="/courses">Courses</a>
           <a href="/api/health">API</a>
         </nav>
       </header>
