--- a/static/index.html
+++ b/static/index.html
@@ -183,6 +183,7 @@
 
           <div class="cta">
             <a class="btn primary" href="/api/health">✅ Test API Health</a>
+            <a href="/courses" class="btn">Browse Courses</a>
             <a class="btn" href="https://github.com/jlowder7884/jim-education-platform" target="_blank" rel="noreferrer">View Repo</a>
           </div>
         </section>
